@@ -1,3 +1,8 @@
+	* add OpenID 2.0-compliant discovery and authentication request.
+	  However, it does NOT yet support the OpenID 2.0 *responses*,
+	  so at the present time this will fail in strange ways when
+	  logging in to a 2.0 OP.
+
 	* add method on claimed identity object to get delgated URL
 
 0.14: (2007-08-03)
